--- a/docker/demisto-sdk/Dockerfile
+++ b/docker/demisto-sdk/Dockerfile
@@ -15,8 +15,7 @@ RUN apt-get update && apt-get -y --no-install-recommends upgrade && apt-get inst
     libssl-dev zlib1g-dev libbz2-dev \
     libreadline-dev libsqlite3-dev wget llvm libncurses5-dev libncursesw5-dev \
     xz-utils tk-dev libffi-dev liblzma-dev zsh \
-    libffi-dev openssl-dev \
-    python3-dev gfortran g++ pkg-config libhdf5-dev \
+    libffi-dev python3-dev gfortran g++ pkg-config libhdf5-dev \
     -y 
 
 # Docker cli tools installation
@@ -37,7 +36,7 @@ ADD https://raw.githubusercontent.com/demisto/demisto-sdk/master/package-lock.js
 
 # Python requirements
 ADD requirements.txt .
-RUN npm ci && python3 -m pip install --no-cache-dir -r requirements.txt && rm requirements.txt
+RUN npm ci -g && python3 -m pip install --no-cache-dir -r requirements.txt && rm requirements.txt
 
 # install zsh and pyenv
 RUN cd ~ \
