more human deps

--- a/docker/content-env/Dockerfile
+++ b/docker/content-env/Dockerfile
@@ -12,10 +12,12 @@ RUN apt-get update && apt-get -y --no-install-recommends upgrade && apt-get inst
     lsb-release \
     make \
     build-essential \
-    libssl-dev zlib1g-dev libbz2-dev \
-    libreadline-dev libsqlite3-dev wget llvm libncurses5-dev libncursesw5-dev \
-    xz-utils tk-dev libffi-dev liblzma-dev zsh \
-    libffi-dev python3-dev gfortran g++ pkg-config libhdf5-dev \
+    zsh \
+    wget \
+    python3-dev \
+    libffi-dev \
+    libssl-dev \
+    software-properties-common \
     -y 
 
 # Docker cli tools installation
