--- a/docker/content-env/Dockerfile
+++ b/docker/content-env/Dockerfile
@@ -52,9 +52,8 @@ RUN python3 -m pip install --no-cache-dir -r requirements.txt \
     && poetry --version \
     && demisto-sdk --version \
     && poetry install \
-    && npm ci
-
-ENV POETRY_VENV_PATH ${poetry env info -p}
+    && npm ci \
+    && export POETRY_VENV_PATH=${poetry env info -p}
 
 # install zsh and pyenv
 RUN cd ~ \
