--- a/docker/dockerbuild/Dockerfile
+++ b/docker/dockerbuild/Dockerfile
@@ -16,5 +16,5 @@ RUN bash -i -c 'pyenv install 3.10.0 && pyenv versions | grep 3.10.0'
 
 COPY requirements.txt .
 
-RUN bash -c - c 'pip install --user --no-cache-dir -r requirements.txt'
+RUN bash -i -c 'pip install --user --no-cache-dir -r requirements.txt'
 RUN bash -i -c 'pyenv shell 3.7.6 && pyenv exec pip3 install --no-cache-dir -r requirements.txt'
