--- a/docker/dockerbuild/Dockerfile
+++ b/docker/dockerbuild/Dockerfile
@@ -1,10 +1,15 @@
 FROM cimg/python:3.10.5
 
+ENV PATH $HOME/.pyenv/bin:/root/.local/bin:$PATH
+ENV PYENV_ROOT $HOME/.pyenv
+
 SHELL [ "/bin/bash", "-c" ]
 
 ADD requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt \
+  && rm -rf $HOME/.pyenv \
+  && curl -fSSL https://pyenv.run | bash \
   && echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc \
   && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc \
   && echo 'eval "$(pyenv init -)"' >> ~/.bashrc \
