rm reqs in the end

--- a/docker/dockerbuild/Dockerfile
+++ b/docker/dockerbuild/Dockerfile
@@ -8,4 +8,5 @@ RUN pip install --no-cache-dir -r requirements.txt \
   && pyenv install 2.7.18 && pyenv versions | grep 2.7.18 \
   && pyenv install 3.7.6 && pyenv versions | grep 3.7.6 \
   && pyenv install 3.8.1 && pyenv versions | grep 3.8.1 \
-  && pyenv install 3.9.0 && pyenv versions | grep 3.9.0
+  && pyenv install 3.9.0 && pyenv versions | grep 3.9.0 \
+  && rm -rf requirements.txt
