--- a/docker/content-env/Dockerfile
+++ b/docker/content-env/Dockerfile
@@ -8,7 +8,7 @@ ARG PYTHON_VERSION 3.10.5
 # Python requirements
 ADD requirements.txt .
 
-RUN apt-get install qemu qemu-user-static binfmt-support debootstrap -y
+RUN apt-get update && apt-get install qemu qemu-user-static binfmt-support debootstrap -y
 
 # install zsh first
 RUN apt-get update && apt-get install -y zsh wget \
